[package]
name = "vergil"
version = "0.1.2"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Vergil!"
license = "MIT"
repository = "https://github.com/zahash/vergil"

[dependencies]
clap = { version = "4", features = ["derive"] }
num-bigint = { version = "0.4" }
num-traits = { version = "0.2" }
