[package]
name = "vergil"
version = "0.1.4"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "Vergil!"
license = "MIT"
repository = "https://github.com/zahash/vergil"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

num-bigint = "0.4"
num-traits = "0.2"

walkdir = "2"
